--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-    "name": "@elasticio/rest-api-component",
-    "version": "1.2.12",
-    "description": "REST API component",
-    "scripts": {
-        "pretest": "eslint lib test verifyCredentials.js --fix",
-        "test": "mocha test/**/*.spec.js --timeout 10000"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:elasticio/rest-api-component.git"
-    },
-    "author": "elastic.io GmbH",
-    "license": "BSD-2-Clause",
-    "engines": {
-        "node": ">=12.13.0"
-    },
-    "dependencies": {
-        "@elastic.io/component-commons-library": "1.1.2",
-        "duplex": "1.0.0",
-        "elasticio-node": "0.0.9",
-        "elasticio-rest-node": "1.2.1",
-        "elasticio-sailor-nodejs": "2.6.13",
-        "request": "2.83.0",
-        "request-promise": "4.2.2",
-        "uuid": "3.3.2",
-        "xml2js": "0.4.19",
-        "xml2js-es6-promise": "1.1.1",
-        "yarn": "1.7.0"
-    },
-    "devDependencies": {
-        "@elastic.io/component-logger": "0.0.1",
-        "chai": "4.1.2",
-        "eslint": "5.6.1",
-        "eslint-config-airbnb": "17.1.0",
-        "eslint-config-airbnb-base": "13.1.0",
-        "eslint-plugin-import": "2.14.0",
-        "mocha": "6.1.4",
-        "nock": "9.0.14",
-        "sinon": "7.3.2"
-    }
+  "name": "@elasticio/rest-api-component",
+  "version": "1.2.12",
+  "description": "REST API component",
+  "scripts": {
+    "pretest": "eslint lib test verifyCredentials.js --fix",
+    "test": "mocha test/**/*.spec.js --timeout 10000"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:elasticio/rest-api-component.git"
+  },
+  "author": "elastic.io GmbH",
+  "license": "BSD-2-Clause",
+  "engines": {
+    "node": ">=12.13.0"
+  },
+  "dependencies": {
+    "@openintegrationhub/ferryman": "^1.1.3",
+    "@elastic.io/component-commons-library": "1.1.2",
+    "duplex": "1.0.0",
+    "elasticio-node": "0.0.9",
+    "elasticio-rest-node": "1.2.1",
+    "elasticio-sailor-nodejs": "2.6.13",
+    "request": "2.83.0",
+    "request-promise": "4.2.2",
+    "uuid": "3.3.2",
+    "xml2js": "0.4.19",
+    "xml2js-es6-promise": "1.1.1",
+    "yarn": "1.7.0"
+  },
+  "devDependencies": {
+    "@elastic.io/component-logger": "0.0.1",
+    "chai": "4.1.2",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "mocha": "6.1.4",
+    "nock": "9.0.14",
+    "sinon": "7.3.2"
+  }
 }
