--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "dependencies": {
     "@openintegrationhub/ferryman": "^1.1.3",
+    "axios": "^0.20.0",
     "duplex": "1.0.0",
-    "request": "2.83.0",
-    "request-promise": "4.2.2",
+    "request": "2.85.0",
+    "request-promise": "4.2.6",
     "uuid": "3.3.2",
     "xml2js": "0.4.19",
     "xml2js-es6-promise": "1.1.1",
